--- a/homepage.html
+++ b/homepage.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Home page </h1>
+
     <a href="index.html">About Us</a>
     <a href="homepage.html">Homepage</a>
     <a href="blog-post.html">Blog Post</a>
@@ -15,9 +16,26 @@
     <a href="create_anew_blog_post.html">Market Report</a>
     <a href="contactus.html">Contact Us</a>
     <a href="Portfolio.html"> Portfolio</a>
+    <nav>
 
     <h2> Introduction </h2>
+    <p>Robots are the future. An aging society, increasing societal welfare, and exponential technological developments each contribute uniquely to the development of robots. Robots are already supporting us in areas such as health care, manufacturing, and in dangerous tasks still done by humans out of necessity. The possibilities for robots to support us will continue to grow. </p>
+   </nav>
+   <nav>
+    <h2>Our services </h2>
 
+    <ol>
+        <li> Medical robotics (care, cure & rehabilitation) </li>
+        <li> Inspection robotics </li>
+        <li>Robotics within smart industry </li>
+    </ol>
+   </nav>
+
+   <nav>
+    <h2> Mission and Vision  </h2>
+    <p> "Strengthening and subsequently propagating the entire value chain surrounding robotics, through intensive collaboration between knowledge institutes, corporations, and policymakers"</p>
+ </nav>
+ <footer> Robo-team company 2019 . All Rights reserved </footer>
 
 </body>
 </html>
