--- a/contactus.html
+++ b/contactus.html
@@ -13,14 +13,13 @@
         </header>
         <div class="navbar">
             <nav>
-                <ul>
-                    <li>Homepage</li>
-                    <li>Blog Post</li>
-                    <li>Blog</li>
-                    <li>Market Report</li>
-                    <li>Contact Us</li>
-                    <li>Portfolio</li>
-                </ul>
+                <a href="index.html">About Us</a>
+                <a href="homepage.html">Homepage</a>
+                <a href="blog-post.html">Blog Post</a>
+                <a href="blog.html">Blog</a>
+                <a href="create_anew_blog_post.html">Market Report</a>
+                <a href="contactus.html">Contact Us</a>
+                <a href="Portfolio.html"> Portfolio</a>
             </nav>
         </div>
         
@@ -53,7 +52,20 @@
            </div>
 
            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3183.685171251077!2d37.371591515255275!3d37.06498497989497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1531e148c415989b%3A0xfbbdf37b040e5315!2zWXVudXNsYXIgxLDFnyBNZXJrZXo!5e0!3m2!1str!2str!4v1559986370390!5m2!1str!2str" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-           <footer> Robo-team company 2019 . All Rights reserved </footer>  
+           <footer> 
+               &copy; Robo-team company 2019 . All Rights reserved 
+            <section>
+                    <ul>
+                        <li><a href="index.html">About Us</a></li>
+                        <li><a href="homepage.html">Homepage</a></li>
+                        <li><a href="blog-post.html">Blog Post</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="create_anew_blog_post.html">Market Report</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
+                        <li><a href="Portfolio.html"> Portfolio</a></li>
+                    </ul>
+            </section>
+           </footer>  
         </div> <!-- Wrapper till here-->      
     </body>
 </html>
