--- a/aboutus.html
+++ b/aboutus.html
@@ -53,5 +53,19 @@
             <img src="https://images.unsplash.com/photo-1534723328310-e82dad3ee43f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=376&q=80" alt="Another picture of a robot" width="300em">
             <p>The rest can be found in the <a href="portfolio.html">Portfolio</a></p>
         </div>
+        <footer>
+            &copy; Robo-team company 2019 . All Rights reserved
+         <section>
+                 <ul>
+                     <li><a href="index.html">About Us</a></li>
+                     <li><a href="homepage.html">Homepage</a></li>
+                     <li><a href="blog-post.html">Blog Post</a></li>
+                     <li><a href="blog.html">Blog</a></li>
+                     <li><a href="create_anew_blog_post.html">Market Report</a></li>
+                     <li><a href="contactus.html">Contact Us</a></li>
+                     <li><a href="Portfolio.html"> Portfolio</a></li>
+                 </ul>
+         </section>
+        </footer>
     </body>
 </html>
