--- a/contactus.html
+++ b/contactus.html
@@ -37,12 +37,21 @@
             <form>
                 <section>
                     <label for="e-mail">Email:</label>
-                    <input type="email" id="e-mail" name="email" required />
-
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required/>
+                    <input type="email" id="e-mail" placeholder="Your Email Here" name="email" required />
                 </section>
-                
+                <section>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name Here" required/>
+                </section>
+                <section>
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" name="subject" placeholder="What is it about ?" required/>
+                </section>
+                <section>
+                    <label for="message">Message:</label>
+                    <textarea id="message" placeholder="Your Message here" required/>Dear Robo-Team;</textarea>
+                </section>
+
                 <section>
                     <input type="submit" name="submit" value="Submit" /> 
                 </section> 
