--- a/blog.html
+++ b/blog.html
@@ -4,14 +4,45 @@
 <title> ROBOTIC BLOG </title>
 </head>
 <body>
-    <div style="text-align: center;">
+    <div style="text-align: left;">
 
         <a href="https://roboticblog44.blogspot.com/" target="_blank">
         
         <input type="button" value=" ROBOTIC BLOG " />
         
         </a></div>
-</body>
+    <article>
+        <a href="#">
+            <img src="https://cdn-images-1.medium.com/max/2600/1*UKDTX-bV5GqSFWK4fNY5GA.png" alt="blog1" width="200" height="200">
+        </a>
+        <h2>
+            blog1
+        </h2>
+        <P>That may all be about to change. Techniques from the best AIs are already being adapted to endow grasping robots with the ability to learn new skills for themselves. The robots in question are still clunky, not to mention stationary. But if this sort of software can be integrated into agile robots like the SpotMini, things will start to get interesting. From doing the household chores to saving you from a burning building, robots that move and learn like us could …</P>
+    </article>
 
+    <article>
+            <a href="#">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/81bs6tIvW9L._SX425_.jpg" alt="blog2" width="200" height="200">
+                </a>
+        <h2>blog2</h2>
+        <p>That may all be about to change. Techniques from the best AIs are already being adapted to endow grasping robots with the ability to learn new skills for themselves. The robots in question are still clunky, not to mention stationary</p>
+    </article>
+
+    <footer>
+        &copy; Robo-team company 2019 . All Rights reserved
+     <section>
+             <ul>
+                 <li><a href="index.html">About Us</a></li>
+                 <li><a href="homepage.html">Homepage</a></li>
+                 <li><a href="blog-post.html">Blog Post</a></li>
+                 <li><a href="blog.html">Blog</a></li>
+                 <li><a href="create_anew_blog_post.html">Market Report</a></li>
+                 <li><a href="contactus.html">Contact Us</a></li>
+                 <li><a href="Portfolio.html"> Portfolio</a></li>
+             </ul>
+     </section>
+    </footer>
+</body>
 
 </html>
