--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,39 @@
 <!DOCTYPE html>
 <html>
+        <style>
+
+                h2 {
+                    border-style: groove;
+                    color: blue;
+                    padding: 10px;
+                    margin: 10px;
+                }
+                a:link {
+                  color: green;
+                  background-color: transparent;
+                  text-decoration: none;
+                }
+                a:visited {
+                  color: pink;
+                  background-color: transparent;
+                  text-decoration: none;
+                }
+                a:hover {
+                  color: red;
+                  background-color: transparent;
+                  text-decoration: underline;
+                }
+                a:active {
+                  color: yellow;
+                  background-color: transparent;
+                  text-decoration: underline;
+                }
+                .img-container {
+                     float: left;
+                     width: 33.33%;
+                     padding: 5px;
+                    }
+                </style>
 <head>
 <title> ROBOTIC BLOG </title>
 </head>
@@ -8,12 +42,12 @@
 
         <a href="https://roboticblog44.blogspot.com/" target="_blank">
         
-        <input type="button" value=" ROBOTIC BLOG " />
+        <input style="color: blueviolet" type="button" value=" ROBOTIC BLOG " />
         
         </a></div>
     <article>
         <a href="#">
-            <img src="https://cdn-images-1.medium.com/max/2600/1*UKDTX-bV5GqSFWK4fNY5GA.png" alt="blog1" width="200" height="200">
+            <img class="img-container" src="https://cdn-images-1.medium.com/max/2600/1*UKDTX-bV5GqSFWK4fNY5GA.png" alt="blog1" width="200" height="200">
         </a>
         <h2>
             blog1
@@ -23,12 +57,13 @@
 
     <article>
             <a href="#">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/81bs6tIvW9L._SX425_.jpg" alt="blog2" width="200" height="200">
+                    <img class="img-container" src="https://images-na.ssl-images-amazon.com/images/I/81bs6tIvW9L._SX425_.jpg" alt="blog2" width="200" height="200">
                 </a>
         <h2>blog2</h2>
         <p>That may all be about to change. Techniques from the best AIs are already being adapted to endow grasping robots with the ability to learn new skills for themselves. The robots in question are still clunky, not to mention stationary</p>
     </article>
 
+    <br>
     <footer>
         &copy; Robo-team company 2019 . All Rights reserved
      <section>
