--- a/aboutus.html
+++ b/aboutus.html
@@ -8,13 +8,11 @@
         <header>
             <h1>About us</h1>
             <nav class="topnav">
-                <a href="index.html">About Us</a>
                 <a href="homepage.html">Homepage</a>
-                <a href="blog-post.html">Blog Post</a>
                 <a href="blog.html">Blog</a>
-                <a href="create_anew_blog_post.html">Market Report</a>
                 <a href="contactus.html">Contact Us</a>
                 <a href="Portfolio.html"> Portfolio</a>
+                <a href="aboutus.html">About Us</a>
             </nav>
         </header>
         <div>
