--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <img class="center" src="logo.png" alt="our logo" width="100px">
             <h1>About us</h1>
             <nav class="topnav">
                 <a href="homepage.html">Homepage</a>
