--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
         <style>
 
                 h2 {
+                    background-color: gray;
                     border-style: groove;
                     color: blue;
                     padding: 10px;
@@ -29,13 +30,20 @@
                   text-decoration: underline;
                 }
                 .img-container {
-                     float: left;
-                     width: 33.33%;
-                     padding: 5px;
-                    }
+                     float: right;
+                }
+                    nav {
+                        display: inline-block;
+                        background-color: gray;
+                        width: 300px;
+                         border: 15px solid yellowgreen;
+                         padding: 20px;
+                         margin: 20px;
+                        }
                 </style>
 <head>
-<title> ROBOTIC BLOG </title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<title style="border-radius: 10px"> ROBOTIC BLOG </title>
 </head>
 <body>
     <div style="text-align: left;">
@@ -44,23 +52,29 @@
         
         <input style="color: blueviolet" type="button" value=" ROBOTIC BLOG " />
         
-        </a></div>
+        </a>
+    </div>
     <article>
         <a href="#">
             <img class="img-container" src="https://cdn-images-1.medium.com/max/2600/1*UKDTX-bV5GqSFWK4fNY5GA.png" alt="blog1" width="200" height="200">
         </a>
+        <nav>
         <h2>
             blog1
         </h2>
         <P>That may all be about to change. Techniques from the best AIs are already being adapted to endow grasping robots with the ability to learn new skills for themselves. The robots in question are still clunky, not to mention stationary. But if this sort of software can be integrated into agile robots like the SpotMini, things will start to get interesting. From doing the household chores to saving you from a burning building, robots that move and learn like us could …</P>
+    </nav>
     </article>
-
+    <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i>
+    <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i> <i class="material-icons">favorite</i>
     <article>
             <a href="#">
                     <img class="img-container" src="https://images-na.ssl-images-amazon.com/images/I/81bs6tIvW9L._SX425_.jpg" alt="blog2" width="200" height="200">
                 </a>
+    <nav>
         <h2>blog2</h2>
         <p>That may all be about to change. Techniques from the best AIs are already being adapted to endow grasping robots with the ability to learn new skills for themselves. The robots in question are still clunky, not to mention stationary</p>
+    </nav>
     </article>
 
     <br>
